# flir

./: .gitignore  .pre-commit-config.yaml  Assignment1.m  CHANGES.md  CITATION  LICENSE  README.md  env_test.yml  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: flir.tex  flir_pres.tex  refs.bib  task_paper.py
src/flir/: __init__.py  config.py
src/flir/analysis/: __init__.py  estimation.py  task_analysis.py
src/flir/data/consumption/: consumption_2016.csv  consumption_2017.csv  consumption_2018.csv  consumption_2019.csv  consumption_2020.csv  consumption_2021.csv
src/flir/data/source/: 20160101rtfuelmix.csv  20160102rtfuelmix.csv  20160103rtfuelmix.csv  20160104rtfuelmix.csv  20160105rtfuelmix.csv  20160106rtfuelmix.csv  20160107rtfuelmix.csv  20160108rtfuelmix.csv  20160109rtfuelmix.csv  20160110rtfuelmix.csv  20160111rtfuelmix.csv  20160112rtfuelmix.csv  20160113rtfuelmix.csv  20160114rtfuelmix.csv  20160115rtfuelmix.csv  20160116rtfuelmix.csv  20160117rtfuelmix.csv  20160118rtfuelmix.csv  20160119rtfuelmix.csv  (+2174 more)
src/flir/data_management/: __init__.py  clean_data.py  task_data_management.py
src/flir/final/: __init__.py  plot.py  task_final.py
tests/analysis/: instrument.csv  regressor.csv  response.csv  test_estimation.py  test_model.py  test_predict.py
tests/data_management/: consumption_mock.csv  data_info_fixture.yaml  test_clean_data.py  wind_mock.csv
tests/data_management/LBMP_mock/: LBMP_mock.csv
tests/data_management/consumption_mock/: consumption_mock.csv
