[metadata]
name = flir
description = FLIR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hun-baek/flir
author = Jonghun Baek
author_email = s6jobaek@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/Hun-baek/flir
    Documentation = https://github.com/Hun-baek/flir
    Github = https://github.com/Hun-baek/flir
    Tracker = https://github.com/Hun-baek/flir/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/flir/_version.py
